# tme

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup
doc/: CMakeLists.txt  Doxyfile.in  directories  generate-plant-uml  generate-plant-uml-svg
res/: fragment-texture.glsl  fragment.glsl  vertex-color.glsl  vertex-texture.glsl  vertex.glsl
src/: CMakeLists.txt  main.cpp  namespaces.hpp
src/app/: camera.cpp  camera.hpp  editor.cpp  editor.hpp  tilemap.cpp  tilemap.hpp
src/app/graphics/: color.cpp  color.hpp  texture.cpp  texture.hpp  tile.cpp  tile.hpp
src/app/layers/: background.cpp  background.hpp  editing.cpp  editing.hpp  map.cpp  map.hpp  menu.cpp  menu.hpp  ui.cpp  ui.hpp
src/core/: application.cpp  application.hpp  key.hpp  key_test.cpp  log.cpp  log.hpp  loggable.hpp  map.hpp  storage.hpp  window.cpp  window.hpp  window_test.cpp
src/core/events/: dispatcher.hpp  dispatcher_test.cpp  event.hpp  event_test.cpp  handler.hpp  key.hpp  key_test.cpp  mouse.hpp  window.hpp  window_test.cpp
src/core/exceptions/: common.hpp  graphics.hpp  input.hpp  validation.hpp
src/core/graphics/: batch.cpp  batch.hpp  buffer.cpp  buffer.hpp  common.cpp  common.hpp  gl.hpp  index.cpp  index.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp
src/core/layers/: imgui.cpp  imgui.hpp  layer.cpp  layer.hpp  ui.cpp  ui.hpp
src/platform/: context.hpp  glfw.cpp  glfw.hpp  glfw_test.cpp
test/: CMakeLists.txt  main_test.cpp
test/res/: fragment-good.glsl  vertex-bad.glsl
test/src/: sigcounter.hpp
test/src/core/: application_test.cpp  log_test.cpp  loggable_test.cpp  storage_test.cpp  window_test.cpp
test/src/core/events/: dispatcher_test.cpp  key_test.cpp  mouse_test.cpp  window_test.cpp
test/src/core/graphics/: base.hpp  batch_test.cpp  buffer_test.cpp  index_test.cpp  shader_test.cpp  texture_test.cpp  vertex_test.cpp
test/src/core/layers/: imgui_test.cpp  layer_test.cpp  ui_test.cpp
test/src/platform/: glfw_test.cpp
